Fixes some minor UI issues:  * The login iframe should now be the right width on IE.  * Added a scrollbar to the getting started tab.

--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -418,6 +418,15 @@ span.infoLinks:hover {
 	text-decoration: none;
 }
 
+#gettingStartedTab {
+    overflow: scroll;
+}
+
+#loginDialog {
+    min-width: 700px;
+    min-height: 600px;
+}
+
 .sub_header {
 	height: 25px;
 	line-height: 25px;
